--- a/.github/workflows/clone.yml
+++ b/.github/workflows/clone.yml
@@ -20,14 +20,16 @@ jobs:
       - uses: actions/checkout@v2
       - run: |
           git config user.name ${{ github.actor }}
-          git remote add DSInternals https://github.com/MichaelGrafnetter/DSInternals.git
-          git remote add sqlmap https://github.com/sqlmapproject/sqlmap.git
-          git remote add Snaffler https://github.com/SnaffCon/Snaffler.git
-          git remote add wesng https://github.com/bitsadmin/wesng.git
-          git remote add Zircolite https://github.com/wagga40/Zircolite.git
-          git remote add yara https://github.com/VirusTotal/yara.git
-          git remote add windows_hardening https://github.com/0x6d69636b/windows_hardening.git
-          git remote add limiter  https://github.com/liranpi2/limiter.git
+          git config remote.remote.url >&- || git remote add DSInternals https://github.com/MichaelGrafnetter/DSInternals.git
+          git config remote.remote.url >&- || git remote add sqlmap https://github.com/sqlmapproject/sqlmap.git
+          git config remote.remote.url >&- || git remote add Snaffler https://github.com/SnaffCon/Snaffler.git
+          git config remote.remote.url >&- || git remote add wesng https://github.com/bitsadmin/wesng.git
+          git config remote.remote.url >&- || git remote add Zircolite https://github.com/wagga40/Zircolite.git
+          git config remote.remote.url >&- || git remote add yara https://github.com/VirusTotal/yara.git
+          git config remote.remote.url >&- || git remote add windows_hardening https://github.com/0x6d69636b/windows_hardening.git
+          git config remote.remote.url >&- || git remote add limiter  https://github.com/liranpi2/limiter.git
+      - name: add subtree
+        run: |
           git subtree add --prefix=windows_hardening https://github.com/0x6d69636b/windows_hardening.git master
           git subtree add --prefix=yara https://github.com/VirusTotal/yara.git master
           git subtree add --prefix=Zircolite https://github.com/wagga40/Zircolite.git master
@@ -35,5 +37,5 @@ jobs:
           git subtree add --prefix=Snaffler https://github.com/SnaffCon/Snaffler.git master
           git subtree add --prefix=sqlmap https://github.com/sqlmapproject/sqlmap.git master
           git subtree add --prefix=DSInternals https://github.com/MichaelGrafnetter/DSInternals.git master
-          git subtree pull --prefix limiter  https://github.com/liranpi2/limiter.git master
+          git subtree add --prefix limiter  https://github.com/liranpi2/limiter.git master
           git push
