--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,4 +1,4 @@
-name: update
+name: trigger update
 
 on:
   schedule:
@@ -21,8 +21,7 @@ jobs:
           git subtree pull --prefix wesng https://github.com/bitsadmin/wesng.git master
           git subtree pull --prefix Zircolite https://github.com/wagga40/Zircolite.git master
           git subtree pull --prefix yara https://github.com/VirusTotal/yara.git master
-          git subtree pull --prefix windows_hardening https://github.com/0x6d69636b/windows_hardening.git master     
-          git subtree pull --prefix limiter https://github.com/liranpi2/limiter.git master
+          git subtree pull --prefix windows_hardening https://github.com/0x6d69636b/windows_hardening.git master
       - name: Commit & push changes
         run: |
           git config user.name ${{ github.actor }}
