--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -15,9 +15,7 @@ jobs:
 
       - name: Pull 
         run: |
-          git subtree pull --prefix limiter https://github.com/liranpi2/limiter.git master
-      - name: Commit & push changes
-        run: |
           git config user.name ${{ github.actor }}
           git merge -s subtree -Xsubtree="$prefix" limiter/master --allow-unrelated-histories
-          git commit -am "Auto updated references" && git push || echo "No changes to commit"
+          git push
+        continue-on-error: true 
