--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -16,6 +16,6 @@ jobs:
       - name: Pull 
         run: |
           git config user.name ${{ github.actor }}
-          git merge -s subtree -Xsubtree="$prefix" limiter/master --allow-unrelated-histories
+          git subtree pull --prefix limiter  https://github.com/liranpi2/limiter.git master && git merge -s ours --allow-unrelated-histories -m "msg"
           git push
         continue-on-error: true 
