--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,9 +1,15 @@
 name: trigger update
 
 on:
-  schedule:
-    - cron:  '*/5 * * * *'
-    
+  workflow_dispatch:
+    inputs:
+          logLevel:
+            description: 'Log level'     
+            required: true
+            default: 'warning'
+          tags:
+            description: 'build scenario tag'  
+           
 permissions: write-all
   
 jobs:
